[metadata]
name = get-asn-bridgeythegeek
version = 0.0.1
author = Bridgey the Geek
author_email = bridgeythegeek@gmail.com
description = Resolve IP addresses to ASN
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bridgeythegeek/get-asn
project_urls =
    Bug Tracker = https://github.com/bridgeythegeek/get-asn/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src